# src/controllers/security.ts
@@ -1,4 +1,4 @@
-import { Get, Route, Security, Request, Response, Controller } from 'tsoa';
+import { Get, Route, Tags, Security, Request, Response, Controller } from 'tsoa';
 import { ErrorResponseModel } from '../types/common';
 import { User } from '../types/user';
 
@@ -6,11 +6,16 @@ interface RequestWithUser {
   user?: any;
 }
 
-@Route('SecurityTest')
+@Tags('Auth 用户授权登录模块')
+@Route('auth')
 export class SecurityTestController extends Controller {
+  /**
+   * 
+   * @param request 
+   */
   @Response<ErrorResponseModel>('default', 'Unexpected error')
   @Security('api_key')
-  @Get()
+  @Get('query')
   public async GetWithApi(@Request() request: RequestWithUser): Promise<User> {
     console.info('==request==', request.user);
     return Promise.resolve(request.user);
@@ -18,7 +23,7 @@ export class SecurityTestController extends Controller {
 
   @Response<ErrorResponseModel>('default', 'Unexpected error')
   @Security('authorization')
-  @Get('auth')
+  @Get('header')
   public async GetWithToken(@Request() request: RequestWithUser): Promise<User> {
     console.info('==request token==', request.user);
     return Promise.resolve(request.user);
